# layerdb

./: .gitignore  Cargo.toml  README.md
benches/: layerdb.rs  nvme.rs  regression.rs
benchmarks/: README.md  baseline.json  rocksdb_comparison.md  vectdb_comparison.md  vectdb_gate.json  vectordb_comparison.md  vectordb_gate.json
bins/: bench_lancedb.rs  bench_spfresh_sharded.rs  layerdb.rs  vectdb-cli.rs  vectdb-deploy.rs  vectordb-cli.rs  vectordb-deploy.rs
bins/layerdb/: commands_inspect.rs  commands_ops.rs
crates/layerdb/: Cargo.toml
crates/layerdb/benches/: regression.rs
crates/layerdb/src/: lib.rs
crates/layerdb/src/compaction/: mod.rs
crates/layerdb/src/integrity/: mod.rs
crates/layerdb/src/io/: mod.rs  native_uring.rs  pool.rs
crates/layerdb/src/memtable/: iter.rs
crates/layerdb/src/sst/: builder.rs  iter.rs  mod.rs
crates/layerdb/src/version/: compaction_ops.rs  io_tiers.rs  iter.rs  mod.rs
crates/layerdb/tests/: archive_reachability_cli.rs  background_scrubber.rs  bench_regression_check.rs  branch_cli.rs  compact_auto_cli.rs  compact_cli.rs  compaction_coverage.rs  create_branch_from_seqno_cli.rs  delete_range_cli.rs  dump_cli.rs  freeze_cli.rs  freeze_s3.rs  frozen_objects_cli.rs  get_cli.rs  ingest_cli.rs  ingest_sst.rs  metrics_cli.rs  milestone1.rs  milestone3_io.rs  partitioning.rs  prop_branch_compaction.rs  prop_branch_range_compaction.rs  put_delete_cli.rs  rebalance_tiers.rs  retention_floor_cli.rs  scan_bounds_cli.rs  scan_cli.rs  verify_cli.rs  wal_group_commit.rs  write_batch_invalid_cli.rs
crates/vectdb/: Cargo.toml  README.md
crates/vectdb/src/: cluster.rs  columnar.rs  lib.rs  linalg.rs  topology.rs
crates/vectdb/src/index/: spfresh.rs  spfresh_diskmeta.rs  spfresh_layerdb_sharded.rs
crates/vectdb/tests/: deploy_docker.rs  deploy_docker_load.rs  partitioning.rs
crates/vectordb/: Cargo.toml  README.md
crates/vectordb/src/: lib.rs  linalg.rs  types.rs
crates/vectordb/src/index/: kmeans.rs  mod.rs  spfresh.rs  spfresh_diskmeta.rs  spfresh_layerdb_sharded.rs  spfresh_offheap.rs
crates/vectordb/src/index/saq/: plan.rs
crates/vectordb/src/index/spfresh_layerdb/: commit_pipeline.rs  config.rs  lifecycle.rs  mod.rs  mutations.rs  open_recovery.rs  rebuilder.rs  runtime_helpers.rs  stats.rs  storage.rs  tests.rs  vector_blocks.rs
crates/vectordb/src/index/spfresh_layerdb/tests/: basic.rs  batch.rs  diskmeta.rs  randomized.rs  startup.rs
crates/vectordb/tests/: deploy_docker.rs  deploy_docker_load.rs
docker/: docker-compose.integration.yml  vectdb-deploy.Dockerfile  vectordb-deploy.Dockerfile
docs/: LAWS.md  SPFRESH_LAYERDB_ARCHITECTURE.md  perf_steps.md  research.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: layerdb_internal_key_decode.rs  layerdb_table_root_decode.rs  vectdb_spfresh_posting_member_event_decode.rs  vectdb_spfresh_posting_members_snapshot_decode.rs  vectdb_spfresh_vector_row_decode.rs  vectdb_spfresh_wal_decode.rs
scripts/: bench_milvus.py  bench_regression.sh  check_bench_regression.py  check_vectdb_gate.py  check_vectordb_gate.py  minio_integration.sh  vectdb_bench_gate.sh  vectdb_deploy_integration.sh  vectdb_deploy_load_test.sh  vectordb_bench_gate.sh  vectordb_deploy_integration.sh  vectordb_deploy_load_test.sh
src/: internal_key.rs  lib.rs  range_tombstone.rs
src/cache/: mod.rs
src/compaction/: mod.rs
src/db/: iterator.rs  mod.rs  options.rs  snapshot.rs
src/integrity/: mod.rs
src/io/: mod.rs  native_uring.rs
src/memtable/: mod.rs
src/s3/: mod.rs
src/sst/: mod.rs
src/tier/: mod.rs
src/version/: iter.rs  manifest.rs  mod.rs
src/wal/: mod.rs
tests/: archive_branch_cli.rs  archive_reachability_cli.rs  bench_cli.rs  bench_regression_check.rs  block_cache.rs  branches_cli.rs  branching.rs  checkout_cli.rs  compact_cli.rs  compaction_coverage.rs  create_branch_from_branch_cli.rs  create_branch_from_seqno_cli.rs  db_check_cli.rs  delete_range_cli.rs  freeze_cli.rs  freeze_s3.rs  freeze_s3_minio.rs  gc_local_cli.rs  hdd_tier.rs  ingest_sst.rs  io_backend.rs  metrics_cli.rs  metrics_db.rs  milestone1.rs  milestone3_io.rs  multi_get.rs  prop_branch_range_compaction.rs  prop_compaction.rs  put_branch_cli.rs  rebalance_cli.rs  rebalance_tiers.rs  scan_bounds_cli.rs  scrub_cli.rs  scrub_report.rs  write_batch_atomic_cli.rs  write_batch_branch_cli.rs  write_batch_cli.rs  write_batch_invalid_cli.rs  write_batch_range_delete_cli.rs
vectordb/: Cargo.toml  README.md
vectordb/src/: columnar.rs  dataset.rs  ground_truth.rs  lib.rs  linalg.rs  types.rs
vectordb/src/index/: append_only.rs  mod.rs  saq.rs  spfresh.rs  spfresh_diskmeta.rs  spfresh_layerdb.rs  spfresh_layerdb_sharded.rs  spfresh_offheap.rs
vectordb/src/index/saq/: mod.rs  plan.rs  tests.rs
vectordb/src/index/spfresh_layerdb/: config.rs  mod.rs  rebuilder.rs  stats.rs  storage.rs  sync_utils.rs  tests.rs  vector_blocks.rs
(+15 files in other folders)
