[package]
name = "layerdb"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
anyhow = "1"
blake3 = "1.6"
bytes = { version = "1.10", features = ["serde"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
crc32c = "0.6"
crossbeam-channel = "0.5"
crossbeam-skiplist = "0.1"
lru = "0.16.3"
memmap2 = "0.9"
parking_lot = "0.12"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
thiserror = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest = "1.6"
rand = "0.8"
tempfile = "3"

[[bench]]
name = "layerdb"
harness = false
