[package]
name = "vectordb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrow-array = "57.2"
arrow-schema = "57.2"
bincode = "1"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
lancedb = "0.26.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
layerdb = { path = ".." }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
